Feature/102 foreign func mem api support (#134)